hallo, ich hab fortschritte gemacht, danke an jannes <3