@@ -7,6 +7,14 @@
   <version>1.0-SNAPSHOT</version>
   <name>gitlabci-maven</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <src.dir>src</src.dir>
+    <test.dir>src/test</test.dir>
+    <maven.compiler.source>16</maven.compiler.source>
+    <maven.compiler.target>16</maven.compiler.target>
+    <junit.jupiter.version>5.4.0</junit.jupiter.version>
+    <junit.platform.version>1.2.0</junit.platform.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,10 +22,99 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>15.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>11.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-runner</artifactId>
+      <version>${junit.platform.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>11-ea+24</version>
+    </dependency>
   </dependencies>
+  <profiles>
+    <profile>
+      <id>tietz</id>
+      <properties>
+        <src.dir>releases/tietz/v3/src</src.dir>
+      </properties>
+      <activation>
+        <property>
+          <name>tietz</name>
+        </property>
+      </activation>
+      <build>
+        <resources>
+          <resource>
+            <directory>
+              src/main/resources
+            </directory>
+          </resource>
+        </resources>
+        <plugins>
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>1.2.7.RELEASE</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>
+                    repackage
+                  </goal>
+                </goals>
+                <configuration>
+                  <finalName>v3</finalName>
+                  <classifier>tietz</classifier>
+                  <mainClass>
+                    tictactoe.GUIStarter
+                  </mainClass>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
   <build>
-    <sourceDirectory>src/group</sourceDirectory>
-    <testSourceDirectory>src/test</testSourceDirectory>
+    <sourceDirectory>${src.dir}</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -34,10 +131,40 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.6</version>
+        <configuration>
+          <mainClass>HelloFX</mainClass>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.7.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+          <source>16</source>
+          <target>16</target>
+          <compilerArgs>
+            <arg>--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+            </arg>
+            <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED
+            </arg>
+            <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
+            </arg>
+            <arg>
+              --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            </arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
-  <properties>
-   <maven.compiler.source>1.8</maven.compiler.source>
-   <maven.compiler.target>1.8</maven.compiler.target>
- </properties>
 </project>
